# hicar-mcp

./: .gitignore  LICENSE  README.md  manifest.json  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml  regenerate.yml
examples/: claude_code_mcp.md  claude_desktop_config.json  cursor_mcp.json
scripts/: regenerate.py
src/hicar_mcp/: __init__.py  bootstrap.py  cli.py  config.py  kb.py  models.py  regenerate.py  server.py
src/hicar_mcp/artifacts/: __init__.py  loader.py  schema_v1.py
src/hicar_mcp/codesearch/: __init__.py  lexical.py  semantic.py  service.py  symbols.py
src/hicar_mcp/data/: docs_index.json  kvars.json  schema.json  schemes.json  variables.json  version.json
src/hicar_mcp/data/docs/: index.md  mcp.md
src/hicar_mcp/data/examples/: SNOWPACK_cpp.nml  Standard.nml  Standard_restart.nml  default_hicar_options.nml
src/hicar_mcp/data/index/: embeddings.npy  index_meta.json
src/hicar_mcp/docs/: __init__.py  markdown.py
src/hicar_mcp/embed/: __init__.py  api.py  base.py  local.py
src/hicar_mcp/extract/: __init__.py  runner.py
src/hicar_mcp/generate/: __init__.py  nml_gen.py
src/hicar_mcp/knowledge/: __init__.py  constants.py  examples.py  fortran.py  namelist_doc.py  namelist_schema.py  namelist_source.py  schemes.py  varcatalog.py
src/hicar_mcp/nml/: __init__.py  reader.py  writer.py
src/hicar_mcp/validate/: __init__.py  binary.py  static.py
tests/: conftest.py  test_artifacts.py  test_codesearch.py  test_knowledge.py  test_nml_and_validate.py  test_server.py
tests/fixtures/repo/: CMakeLists.txt  mkdocs.yml
tests/fixtures/repo/docs/: index.md  running.md
tests/fixtures/repo/helpers/example_namelists/: sample.nml
tests/fixtures/repo/src/constants/: icar_constants.F90
tests/fixtures/repo/src/io/: default_output_metadata.F90
tests/fixtures/repo/src/objects/: options_obj.F90
tests/fixtures/repo/src/physics/: mp_driver.F90
(+1 files in other folders)
